--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
   "keywords": [],
@@ -14,11 +15,8 @@
     "nodemon": "^3.1.7"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.703.0",
-    "@aws-sdk/s3-request-presigner": "^3.703.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.6",
-    "express": "^4.21.1",
-    "express-fileupload": "^1.5.1"
+    "express": "^4.21.1"
   }
 }
